# Drone-coverage

./: CMakeLists.txt  input.txt  visualizer.py
include/: geometry.h  task.h
src/: drone_sweeping.cpp
visualization/additional1/claw/: input.txt  output.txt
visualization/additional1/large square/: input.txt  output.txt
visualization/additional1/star/: input.txt  output.txt
visualization/additional1/triangle/: input.txt  output.txt
visualization/additional2/claw/: input.txt  output.txt
visualization/additional2/large square/: input.txt  output.txt
visualization/additional2/star/: input.txt  output.txt
visualization/additional2/triangle/: input.txt  output.txt
visualization/main/claw/: input.txt  output.txt
visualization/main/large square/: input.txt  output.txt
visualization/main/square/: input.txt  output.txt
visualization/main/star/: input.txt  output.txt
visualization/many/star/: input.txt  output.txt
visualization/many/very large square/: input.txt  output.txt
